# worst_wiki_photos

./: 01_tutorial_accessing_wikipedia_api  02.1_simple_Error.py  02_testing_wikipedia_images  03_example_request.py  04_request_images.py  README.md  pyproject.toml  test_run.py
